base/standalone-components/kubediff/kubediff-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubediff
spec:
  ports:
    - port: 80
      name: http
  selector:
    name: kubediff
