base/standalone-components/kubediff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubediff
  namespace: kubediff
  labels:
    app: kubediff
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - kubediff.sdpaks.equinor.com
    secretName: kubediff-tls
  rules:
    - host: kubediff.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubediff
              servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubediff-auth
  namespace: falco
  labels:
    app: kubediff
spec:
  tls:
  - hosts:
    - kubediff.sdpaks.equinor.com
    secretName: kubediff-tls
  rules:
    - host: kubediff.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2 
            backend:
              serviceName: oauth2-proxy-sdp
              servicePort: 4180
---
